subida paginas index

--- a/pages_index/index_gana_diario_produce_tu_diario.html
+++ b/pages_index/index_gana_diario_produce_tu_diario.html
@@ -13,6 +13,12 @@
         .column5of7, .column6of7, .column7of7 { width: 300px; float: left; margin: 60px;}
         div.one, div.two, div.three, div.four { width: 300px; float: left; margin: 10px;
                                                 border: 3px solid rgb(253, 211, 43);}
+
+        table.one { margin: 10px;}
+        td.one { font-size: 70px;}
+        .espacios { color: #737367;}
+        .fondo { background-color: #737367; color: white;}
+
         fieldset.one { width: 96%; margin: 10px; border: 3px solid black;}
         .column1 { width: 350px; float: left;}
         .column2 { width: 600px; float: left;}
@@ -42,7 +48,7 @@
         <input class="ingresar" type="submit" name="ingresar" value="Ingresar" />
     </form>
     <p align="center">
-        <img src="images/agencia_ciudadana.png" alt="Logo" width="370" height="250">
+        <img src="../images/agencia_ciudadana.png" alt="Logo" width="370" height="250">
     </p>
     <form>
         <fieldset>
@@ -59,7 +65,7 @@
     </form>
     <p align="center">
         <a href="./index.html#plataformas" target="_blanck">
-            <img src="images/logo_emprendedores.PNG" alt="Logo" width="1200" height="600">
+            <img src="../images/logo_emprendedores.PNG" alt="Logo" width="1200" height="600">
         </a>
     </p>
 
@@ -67,7 +73,7 @@
     <h1>SERVICIOS PARA TU REACTIVACIÓN</h1>
 
     <div class="column1of7">
-        <img src="images/1_alianza_con_supermayoristas.PNG" alt="supermayoristas" width="300" height="200">
+        <img src="../images/1_alianza_con_supermayoristas.PNG" alt="supermayoristas" width="300" height="200">
         <h2 align="center">Alianza con <br /> supermayoristas</h2>
         <br>
         <form action="../index.html">
@@ -75,7 +81,7 @@
         </form>
     </div>
     <div class="column2of7">
-        <img src="images/2_alianza_con_micronegocios.PNG" alt="micronegocios" width="300" height="200">
+        <img src="../images/2_alianza_con_micronegocios.PNG" alt="micronegocios" width="300" height="200">
         <h2 align="center">Alianza con <br /> micronegocios</h2>
         <br>
         <form action="../index.html">
@@ -83,7 +89,7 @@
         </form>
     </div>
     <div class="column3of7">
-        <img src="images/3_comercio_electronico.PNG" alt="electronico" width="300" height="220">
+        <img src="../images/3_comercio_electronico.PNG" alt="electronico" width="300" height="220">
         <h2 align="center">Comercio electrónico</h2> 
         <br>
         <form action="../index.html">
@@ -91,7 +97,7 @@
         </form>
     </div>
     <div class="column4of7">
-        <img src="images/4_red_de_microdistribucion.PNG" alt="microdistribusion" width="300" height="200">
+        <img src="../images/4_red_de_microdistribucion.PNG" alt="microdistribusion" width="300" height="200">
         <h2 align="center">Red de <br /> microdistribucion</h2>
         <br>
         <form action="../index.html">
@@ -99,7 +105,7 @@
         </form>
     </div>
     <div class="column5of7">
-        <img src="images/5_ruta_de_empoderamiento.PNG" alt="empoderamiento" width="300" height="200">
+        <img src="../images/5_ruta_de_empoderamiento.PNG" alt="empoderamiento" width="300" height="200">
         <h2 align="center">Ruta de <br /> empoderamiento</h2>
         <br>
         <form action="../index.html">
@@ -107,7 +113,7 @@
         </form>
     </div>
     <div class="column6of7">
-        <img src="images/6_asesorias_de_desarrollo_empresarial.PNG" alt="empresarial" width="300" height="220">
+        <img src="../images/6_asesorias_de_desarrollo_empresarial.PNG" alt="empresarial" width="300" height="220">
         <h2 align="center">Asesorías de desarollo <br /> empresarial</h2>
         <br>
         <form action="../index.html">
@@ -115,48 +121,83 @@
         </form>
     </div>
     <div class="column7of7">
-        <img src="images/7_banco_de_alianzas_e_intercambios.PNG" alt="intercambios" width="300" height="200">
+        <img src="../images/7_banco_de_alianzas_e_intercambios.PNG" alt="intercambios" width="300" height="200">
         <h2 align="center">Banco de Alianzas <br /> e intercambios</h2>
         <br>
         <form action="../index.html">
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
-    <p><a href="index.html"><img src="images/apoyamos_tu_recuperacion_economica.PNG"  align="center"></a></p>
+    <p><a href="index.html"><img src="../images/apoyamos_tu_recuperacion_economica.PNG"  align="center"></a></p>
     
     <div id="plataformas"></div>
     <h1> <b>Tu Ecosistema Digital</b> </h1>
     <h3><i>Plataformas para afiliados LOGRANTES</i></h3>
     <div class="one">
         <h1>
-            <a href="./pages_index/index_centro_digital_para_comercio_electronico_como_funciona.html#ancla">
-                Centro digital para <br /> Comercio electrónico</a>
+            <a href="./index_centro_digital_para_comercio_electronico_como_funciona.html#ancla">
+                Centro digital para <br /> Comercio electrónico </a>
         </h1>
     </div>
     <div class="two">
         <h1>
-            <a href="./pages_index/index_banco_de_alianzas_y_trueques_como_funciona.html#ancla">
-                Banco de alianzas y <br />trueques</a>
+            <a href="./index_banco_de_alianzas_y_trueques_como_funciona.html#ancla">
+                Banco de alianzas y <br /> trueques</a>
         </h1>
     </div>
     <div class="three">
         <h1>
-            <a href="./pages_index/index_centro_digital_de_empoderamiento_como_funciona.html#ancla">
-                <br> Centro digital de <br> empoderamiento</a>
+            <a href="./index_centro_digital_de_empoderamiento_como_funciona.html#ancla">
+                <br> Centro digital de <br /> empoderamiento </a>
         </h1>
     </div>
-    <div class="four">
+    <div class="four fondo" id="ancla">
         <h1>
-            <a href="./pages_index/index_gana_diario_como_funciona.html#ancla">
-                <br> Gana <br> Diario</a>
+            <a href="./index_gana_diario_como_funciona.html#ancla">
+                <br> <font color="white">Gana <br> Diario</font> </a>
         </h1>
     </div>
 
-    <br /> <br /> <br /> <br /> <br /> <br /> <br />
+    <table class="one" border="1">
+        <tr>
+            <th>
+                <a href="./index_gana_diario_como_funciona.html#ancla">
+                    ¿Comó Funciona?</a>
+            </th>
+            <th>
+                <a href="./index_gana_diario_mensajeria.html#ancla">
+                    Mensajería</a>
+            </th>
+            <th>
+                <a href="./index_gana_diario_administracion.html#ancla">
+                    Administración</a>
+            </th>
+            <th class="fondo">Produce tu Diario</th>
+            <th>
+                <a href="./index_gana_diario_baja_el_costo_de_tu_canasta_familiar.html#ancla">
+                    Baja el costo de tu canasta familiar</a>
+            </th>
+            <th>
+                <a href="./index_gana_diario_satisfaccion_del_cliente.html#ancla">
+                    Satisfacción del cliente</a>
+            </th>
+        </tr>
+        <tr class="fondo">
+            <td class="one" colspan="6">
+                Promociones de minoristas y mayoristas
+                <font class="espacios">/</font>
+                <br /> <br>
+                <form action="../index.html">
+                    <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
+                </form>
+            </td>
+        </tr>
+    </table>
+    
 
     <fieldset class="one">
         <div class="column1">
-            <img src="images/inscripcion.jpg" alt="inscripcion" width="440" height="390">
+            <img src="../images/inscripcion.jpg" alt="inscripcion" width="440" height="390">
         </div>
         <div class="column2">
             <h1>LOGRANTES</h1>
