--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style type="text/css">
         body { background-color: white; font-family: "Roboto", Helvetica, Arial, sans-serif;}
         input.ingresar { font-size: 15px; color: black; padding: 5px;
-            width: 5%; position: fixed; top: 0px; margin: 10px; 
+            width: 5%; position: fixed; top: 0px; margin: 10px; cursor: pointer;
         }
         .column1of3, .column2of3, .column3of3 { width: 420px; float: left;}
         .column1of7, .column2of7, .column3of7, .column4of7 { width: 300px; float: left; margin: 10px;}
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body align="center">
-    <form action="./index.html" align="left">
+    <form action="pages/registro-usuario.html" align="left">
         <input class="ingresar" type="submit" name="ingresar" value="Ingresar" />
     </form>
     <p align="center">
@@ -47,18 +47,18 @@
     <form>
         <fieldset>
             <div class="column1of3">
-                <h3> <a href="./index.html#contacto" target="_blanck">CONTACTANOS</a> </h3>
+                <h3> <a href="./index.html#contacto">CONTACTANOS</a> </h3>
             </div>
             <div class="column2of3">
-                <h3> <a href="./index.html#plataformas" target="_blanck">PLATAFORMAS</a> </h3>
+                <h3> <a href="./index.html#plataformas">PLATAFORMAS</a> </h3>
             </div>
             <div class="column3of3">
-                <h3> <a href="./index.html#servicios" target="_blanck">SERVICIOS</a> </h3>
+                <h3> <a href="./index.html#servicios">SERVICIOS</a> </h3>
             </div>
         </fieldset>
     </form>
     <p align="center">
-        <a href="./index.html#plataformas" target="_blanck">
+        <a href="./index.html#plataformas">
             <img src="images/logo_emprendedores.PNG" alt="Logo" width="1200" height="600">
         </a>
     </p>
@@ -70,7 +70,7 @@
         <img src="images/1_alianza_con_supermayoristas.PNG" alt="supermayoristas" width="300" height="200">
         <h2 align="center">Alianza con <br /> supermayoristas</h2>
         <br>
-        <form action="../index.html">
+        <form action="./pages_index/index_centro_digital_para_comercio_electronico_como_funciona.html#ancla">
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
@@ -78,7 +78,7 @@
         <img src="images/2_alianza_con_micronegocios.PNG" alt="micronegocios" width="300" height="200">
         <h2 align="center">Alianza con <br /> micronegocios</h2>
         <br>
-        <form action="../index.html">
+        <form action="./pages_index/index_centro_digital_para_comercio_electronico_como_funciona.html#ancla">
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
@@ -86,7 +86,7 @@
         <img src="images/3_comercio_electronico.PNG" alt="electronico" width="300" height="220">
         <h2 align="center">Comercio electrónico</h2> 
         <br>
-        <form action="../index.html">
+        <form action="./pages_index/index_centro_digital_para_comercio_electronico_como_funciona.html#ancla">
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
@@ -94,7 +94,7 @@
         <img src="images/4_red_de_microdistribucion.PNG" alt="microdistribusion" width="300" height="200">
         <h2 align="center">Red de <br /> microdistribucion</h2>
         <br>
-        <form action="../index.html">
+        <form action="./pages_index/index_gana_diario_como_funciona.html#ancla">
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
@@ -102,7 +102,7 @@
         <img src="images/5_ruta_de_empoderamiento.PNG" alt="empoderamiento" width="300" height="200">
         <h2 align="center">Ruta de <br /> empoderamiento</h2>
         <br>
-        <form action="../index.html">
+        <form action="./pages_index/index_centro_digital_de_empoderamiento_como_funciona.html#ancla">
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
@@ -110,7 +110,7 @@
         <img src="images/6_asesorias_de_desarrollo_empresarial.PNG" alt="empresarial" width="300" height="220">
         <h2 align="center">Asesorías de desarollo <br /> empresarial</h2>
         <br>
-        <form action="../index.html">
+        <form action="./pages_index/index_centro_digital_de_empoderamiento_como_funciona.html#ancla">
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
@@ -118,11 +118,11 @@
         <img src="images/7_banco_de_alianzas_e_intercambios.PNG" alt="intercambios" width="300" height="200">
         <h2 align="center">Banco de Alianzas <br /> e intercambios</h2>
         <br>
-        <form action="../index.html">
+        <form action="./pages_index/index_banco_de_alianzas_y_trueques_como_funciona.html#ancla">
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
-    <p><a href="index.html"><img src="images/apoyamos_tu_recuperacion_economica.PNG"  align="center"></a></p>
+    <p><a href="index.html#formulario"><img src="images/apoyamos_tu_recuperacion_economica.PNG"  align="center"></a></p>
     
     <div id="plataformas"></div>
     <h1> <b>Tu Ecosistema Digital</b> </h1>
@@ -154,7 +154,7 @@
 
     <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
-    <fieldset class="one">
+    <fieldset class="one" id="formulario">
         <div class="column1">
             <img src="images/inscripcion.jpg" alt="inscripcion" width="440" height="390">
         </div>
