--- a/pages_index/index_gana_diario_baja_el_costo_de_tu_canasta_familiar.html
+++ b/pages_index/index_gana_diario_baja_el_costo_de_tu_canasta_familiar.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body align="center">
-    <form action="./index.html" align="left">
+    <form action="../pages/registro-usuario.html" align="left">
         <input class="ingresar" type="submit" name="ingresar" value="Ingresar" />
     </form>
     <p align="center">
