--- a/pages_index/index_centro_digital_para_comercio_electronico_billetera_electronica.html
+++ b/pages_index/index_centro_digital_para_comercio_electronico_billetera_electronica.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RED SURGIR </title>
+    <link href="../images/agencia_ciudadana.ico" rel="icon">
     <style type="text/css">
         body { background-color: white; font-family: "Roboto", Helvetica, Arial, sans-serif;}
         input.ingresar { font-size: 15px; color: black; padding: 5px;
