--- a/pages_index/index_banco_de_alianzas_y_trueques_como_funciona.html
+++ b/pages_index/index_banco_de_alianzas_y_trueques_como_funciona.html
@@ -54,18 +54,18 @@
     <form>
         <fieldset>
             <div class="column1of3">
-                <h3> <a href="./index.html#contacto" target="_blanck">CONTACTANOS</a> </h3>
+                <h3> <a href="../index.html#contacto"  >CONTACTANOS</a> </h3>
             </div>
             <div class="column2of3">
-                <h3> <a href="./index.html#plataformas" target="_blanck">PLATAFORMAS</a> </h3>
+                <h3> <a href="../index.html#plataformas"  >PLATAFORMAS</a> </h3>
             </div>
             <div class="column3of3">
-                <h3> <a href="./index.html#servicios" target="_blanck">SERVICIOS</a> </h3>
+                <h3> <a href="../index.html#servicios"  >SERVICIOS</a> </h3>
             </div>
         </fieldset>
     </form>
     <p align="center">
-        <a href="./index.html#plataformas" target="_blanck">
+        <a href="../index.html#plataformas"  >
             <img src="../images/logo_emprendedores.PNG" alt="Logo" width="1200" height="600">
         </a>
     </p>
@@ -129,7 +129,7 @@
             <input class="one" type="submit" value="Más información..." id="submit">
         </form>
     </div>
-    <p><a href="index.html"><img src="../images/apoyamos_tu_recuperacion_economica.PNG"  align="center"></a></p>
+    <p><a href="../index.html#formulario"><img src="../images/apoyamos_tu_recuperacion_economica.PNG"  align="center"></a></p>
     
     <div id="plataformas"></div>
     <h1> <b>Tu Ecosistema Digital</b> </h1>
