--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <label>Ciudad/población: <br /> <input type="text" name="ciudad" /> </label> <br /> <br />
             <textarea name="comments" cols="40" rows="5">Ingrese sus comentarios...</textarea>
             <br /> <br /> 
-            <form action="../index.html">
+            <form action="./pages/registro-usuario.html">
             <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
         </form>
         </div>
