--- a/pages_index/index_banco_de_alianzas_y_trueques_como_funciona.html
+++ b/pages_index/index_banco_de_alianzas_y_trueques_como_funciona.html
@@ -180,7 +180,7 @@
                 Ahorra y baja costos y <br> egresos mensualmente <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br /> 
-                <form action="../index.html">
+                <form action="../pages/banco_de_alianza_y_trueques_digitales.html">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
