--- a/pages_index/index_banco_de_alianzas_y_trueques_peticiones.html
+++ b/pages_index/index_banco_de_alianzas_y_trueques_peticiones.html
@@ -180,7 +180,7 @@
                 Haz tus demandas de alianzas <br> y trueques para cada mes <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br />
-                <form action="../index.html">
+                <form action="../pages/banco_de_alianza_y_trueques_digitales.html#dedicate">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
