--- a/pages_index/index_centro_digital_de_empoderamiento_capital_financiero.html
+++ b/pages_index/index_centro_digital_de_empoderamiento_capital_financiero.html
@@ -189,7 +189,7 @@
                 <br> plan financiero) <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br />
-                <form action="../index.html">
+                <form action="../pages/centro_digital_de_empoderamiento.html#oportunidades">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
