--- a/pages_index/index_centro_digital_de_empoderamiento_capital_laboral_profesional.html
+++ b/pages_index/index_centro_digital_de_empoderamiento_capital_laboral_profesional.html
@@ -188,7 +188,7 @@
                 Sirve a otros microempresarios
                 <font class="espacios">///////////////</font>
                 <br /> <br>
-                <form action="../index.html">
+                <form action="../pages/centro_digital_de_empoderamiento.html#oportunidades">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
