--- a/pages_index/index_centro_digital_de_empoderamiento_capital_relacional.html
+++ b/pages_index/index_centro_digital_de_empoderamiento_capital_relacional.html
@@ -188,7 +188,7 @@
                 Monetiza tus contactos
                 <font class="espacios">/////////////////////////////</font>
                 <br /> <br>
-                <form action="../index.html">
+                <form action="../pages/centro_digital_de_empoderamiento.html#relacional">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
