--- a/pages_index/index_centro_digital_de_empoderamiento_como_funciona.html
+++ b/pages_index/index_centro_digital_de_empoderamiento_como_funciona.html
@@ -188,7 +188,7 @@
                 Monetiza tus capitales ocultos <br> ruta de empoderamiento <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br />
-                <form action="../index.html">
+                <form action="../pages/centro_digital_de_empoderamiento.html">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
