--- a/pages_index/index_centro_digital_para_comercio_electronico_billetera_electronica.html
+++ b/pages_index/index_centro_digital_para_comercio_electronico_billetera_electronica.html
@@ -184,7 +184,7 @@
                 Maneja tu dinero y cuentas electrónicamente
                 <font class="espacios"></font>
                 <br /> <br />
-                <form action="../index.html">
+                <form action="../pages/centro_digital_comercio_electronico.html#billetera">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
