--- a/pages_index/index_centro_digital_para_comercio_electronico_como_funciona.html
+++ b/pages_index/index_centro_digital_para_comercio_electronico_como_funciona.html
@@ -184,7 +184,7 @@
                 Gana por ser microdistribuidor
                 <font class="espacios">/////////////////</font>
                 <br /> <br />
-                <form action="../index.html">
+                <form action="../pages/centro_digital_comercio_electronico.html">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
