--- a/pages_index/index_gana_diario_baja_el_costo_de_tu_canasta_familiar.html
+++ b/pages_index/index_gana_diario_baja_el_costo_de_tu_canasta_familiar.html
@@ -189,7 +189,7 @@
                 familiares y contactos <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br />
-                <form action="../index.html">
+                <form action="../pages/dinero_diario.html#canasta">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
