--- a/pages_index/index_gana_diario_como_funciona.html
+++ b/pages_index/index_gana_diario_como_funciona.html
@@ -188,7 +188,7 @@
                 Lleva el diario a tu casa <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br />
-                <form action="../index.html">
+                <form action="../pages/dinero_diario.html">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
