--- a/pages_index/index_gana_diario_satisfaccion_del_cliente.html
+++ b/pages_index/index_gana_diario_satisfaccion_del_cliente.html
@@ -190,7 +190,7 @@
                 (Cuenta impuestos y <br>cuenta de pagos por servicios) <br>
                 <font class="espacios"></font>
                 <br />
-                <form action="../index.html">
+                <form action="../pages/dinero_diario.html">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
