--- a/pages_index/index_banco_de_alianzas_y_trueques_chisgas.html
+++ b/pages_index/index_banco_de_alianzas_y_trueques_chisgas.html
@@ -180,7 +180,7 @@
                 Publica los negocios de oportunidad <br> que ofreces <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br />
-                <form action="../index.html">
+                <form action="../pages/banco_de_alianza_y_trueques_digitales.html#chisgas">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
