--- a/pages_index/index_banco_de_alianzas_y_trueques_ofertas.html
+++ b/pages_index/index_banco_de_alianzas_y_trueques_ofertas.html
@@ -182,7 +182,7 @@
                 Ofrece tus productos y servicios <br> a intercambiar <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br /> 
-                <form action="../index.html">
+                <form action="../pages/banco_de_alianza_y_trueques_digitales.html#dedicate">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
