--- a/pages_index/index_centro_digital_de_empoderamiento_capital_intelectual.html
+++ b/pages_index/index_centro_digital_de_empoderamiento_capital_intelectual.html
@@ -188,7 +188,7 @@
                 Plataforma de comercialización de <br> cursos y capacitación <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br /> 
-                <form action="../index.html">
+                <form action="../pages/centro_digital_de_empoderamiento.html#oportunidades">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
