--- a/pages_index/index_gana_diario_mensajeria.html
+++ b/pages_index/index_gana_diario_mensajeria.html
@@ -188,7 +188,7 @@
                 Gana dinero inmediato <br>
                 <font class="espacios">///////////////////////////////////////////////////////////////////</font>
                 <br /> 
-                <form action="../index.html">
+                <form action="../pages/centro_digital_comercio_electronico.html#tienda">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
