--- a/pages_index/index_gana_diario_produce_tu_diario.html
+++ b/pages_index/index_gana_diario_produce_tu_diario.html
@@ -188,7 +188,7 @@
                 Promociones de minoristas y mayoristas
                 <font class="espacios">/</font>
                 <br /> <br>
-                <form action="../index.html">
+                <form action="../pages/dinero_diario.html">
                     <input class="one" type="submit" value="Quiero ir a la plataforma..." id="submit">
                 </form>
             </td>
